--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asn1crypto==0.24.0
 backcall==0.1.0
+beautifulsoup4==4.7.1
+bs4==0.0.1
 certifi==2019.3.9
 cffi==1.11.5
 cryptography==2.5
@@ -16,6 +18,7 @@ parso==0.3.4
 pexpect==4.6.0
 pickleshare==0.7.5
 prompt-toolkit==2.0.8
+psutil==5.6.1
 ptyprocess==0.6.0
 pycparser==2.19
 Pygments==2.3.1
@@ -26,6 +29,7 @@ pyzmq==17.1.2
 selenium==3.141.0
 simplejson==3.16.0
 six==1.12.0
+soupsieve==1.9.1
 tornado==5.1.1
 traitlets==4.3.2
 urllib3==1.24.1
